CreateVentas modificado , la sumatoria de los precios. Y DeleteVentas realizado

--- a/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
@@ -211,7 +211,7 @@
                         };
 
                     ventas.VentaDetalle.Add(nuevoDetalle);
-                    ventas.Valor += precioVentaDetalle * Cantidad;
+                    ventas.Valor += precioVentaDetalle;
                     Producto = 0;
                     Cantidad = 0;
                     StateHasChanged();
