--- a/Barberia/Barberia/Components/Layout/MainLayout.razor
+++ b/Barberia/Barberia/Components/Layout/MainLayout.razor
@@ -14,8 +14,12 @@
             <Authorized>
                 <div class="top-row px-4">
                     <div class="container-fluid d-flex align-items-center">
+                        <h5 class="fw-bold mb-2 text-uppercase">Barberia X</h5>
                         <a href="/MenuFactura">
-                            <h5 class="fw-bold mb-2 text-uppercase text-center">Barberia X</h5>
+                            <span class="fw-bold mb-2 text-uppercase text-center"></span>Inicio
+                        </a>
+                        <a href="/CreateVentas">
+                            <span class="fw-bold mb-2 text-uppercase text-center"></span>Ventas
                         </a>
                     </div>
 
