--- a/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
+++ b/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
@@ -29,6 +29,16 @@
                         <h3 class="fw-bold text-uppercase">Cobrar</h3>
                     </div>
                 </button>
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Ventas()">
+                    <div class="card-body p-5">
+                        <h3 class="fw-bold text-uppercase">Ventas</h3>
+                    </div>
+                </button>
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Cobrar()">
+                    <div class="card-body p-5">
+                        <h3 class="fw-bold text-uppercase">Cobrar</h3>
+                    </div>
+                </button>
             </div>
         </div>
     </section>
@@ -50,5 +60,9 @@
     private void Cobrar()
     {
         NavigationManager.NavigateTo("/MenuCobrar");
+    }
+    private void Ventas()
+    {
+        NavigationManager.NavigateTo("/IndexVentas");
     }
 }
