--- a/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
@@ -29,13 +29,7 @@
                         <div class="row tab-content">
                             <div class="mb-4">
                                 <div>
-                                    <div class="row card-body">
-                                        <div class="col-4">
-                                            @*Venta Id*@
-                                            <label class="form-label" for="VentaId"><strong>Venta Id:</strong></label>
-                                            <InputNumber id="VentaId" class="form-control" @bind-Value="ventas.VentaId" readonly></InputNumber>
-                                        </div>
-
+                                    <div class="row card-body justify-content-center">
                                         <div class="col-4">
                                             @*FechaCreacion*@
                                             <label class="form-label" for="fechaCreacion"><strong>Fecha Creaci&oacute;n:</strong></label>
