Algunas correcciones en productos y ventas

--- a/Barberia/Barberia/Components/Pages/Productos/DeleteProductos.razor
+++ b/Barberia/Barberia/Components/Pages/Productos/DeleteProductos.razor
@@ -31,8 +31,8 @@
                                         <li><strong>FechaCreaci&oacute;n:</strong> @productos.FechaCreacion.ToShortDateString()</li>
                                         <li><strong>Nombre:</strong> @productos.Nombre</li>
                                         <li><strong>Descripci&oacute;n:</strong> @productos.Descripcion</li>
-                                        <li><strong>Precio de Venta:</strong> @productos.PrecioVenta</li>
-                                        <li><strong>Precio de Compra:</strong> @productos.PrecioCompra</li>
+                                        <li><strong>Precio de Venta:</strong> @productos.PrecioVenta.ToString("N2")</li>
+                                        <li><strong>Precio de Compra:</strong> @productos.PrecioCompra.ToString("N2")</li>
                                         <li><strong>Cantidad en almacen:</strong> @productos.Cantidad</li>
                                     </ul>
                                 </div>
