--- a/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
+++ b/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
@@ -34,9 +34,9 @@
                         <h3 class="fw-bold text-uppercase">Ventas</h3>
                     </div>
                 </button>
-                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Cobrar()">
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Producto()">
                     <div class="card-body p-5">
-                        <h3 class="fw-bold text-uppercase">Cobrar</h3>
+                        <h3 class="fw-bold text-uppercase">Crear Producto</h3>
                     </div>
                 </button>
             </div>
@@ -64,5 +64,9 @@
     private void Ventas()
     {
         NavigationManager.NavigateTo("/IndexVentas");
+    }
+    private void Producto()
+    {
+        NavigationManager.NavigateTo("/CreateProducto");
     }
 }
