--- a/Barberia/Barberia/Components/Pages/Ventas/VistaVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/VistaVentas.razor
@@ -68,6 +68,9 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="d-flex justify-content-center mt-3">
+                            <a href="/MenuFactura" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
+                        </div>
                     </div>
                 </div>
             </div>
