--- a/Barberia/Barberia/Components/Pages/Compra/EditCompras.razor.css
+++ b/Barberia/Barberia/Components/Pages/Compra/EditCompras.razor.css
@@ -1,4 +1,4 @@
-﻿bod.fondo {
+﻿.fondo {
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
