--- a/Barberia/Barberia/Components/Pages/Ventas/DeleteVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/DeleteVentas.razor
@@ -7,6 +7,7 @@
 @attribute [Authorize(Roles = "Admin")]
 @rendermode InteractiveServer
 
+<PageTitle>Ventas</PageTitle>
 
 <a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
