Modificaciones en el context y en los componentes cambios de link y creacion de botones

--- a/Barberia/Barberia/Components/Layout/MainLayout.razor
+++ b/Barberia/Barberia/Components/Layout/MainLayout.razor
@@ -21,6 +21,9 @@
                         <a href="/CreateVentas">
                             <span class="fw-bold mb-2 text-uppercase text-center"></span>Ventas
                         </a>
+                        <a href="/CreateCompras">
+                            <span class="fw-bold mb-2 text-uppercase text-center"></span>Compra
+                        </a>
                     </div>
 
                     <div class="nav-item px-3">
