--- a/Barberia/Barberia/Components/Pages/Productos/DeleteProductos.razor
+++ b/Barberia/Barberia/Components/Pages/Productos/DeleteProductos.razor
@@ -8,14 +8,14 @@
 
 @rendermode InteractiveAuto
 <RadzenNotification />
-<PageTitle>Eliminar el producto</PageTitle>
+<PageTitle>Producto</PageTitle>
 
 
-<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/IndexProductos" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="fondo " style="border-radius: 1rem;">
+            <div class="fondo col-lg-6 col-xl-6" style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
                     <h1 class="fw-bold mb-2 text-uppercase">Eliminar el producto</h1>
@@ -40,9 +40,10 @@
                         </div>
 
                         <!-- Footer -->
-                        <div class="d-flex justify-content-center mt-3">
+                        <div class="row d-flex justify-content-center mt-3">
                             <td>
                                 <div>
+                                    <a href="/IndexProductos" class="w-20 btn btn-outline-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
                                     <button @onclick="() => ConfirmarEliminar(productos.ProductoId)" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
                                 </div>
                             </td>
@@ -115,7 +116,7 @@
                 };
             notificationServices.Notify(Mensaje);
             await Task.Delay(1000);
-            navigationManager.NavigateTo("/InventarioIndex");
+            navigationManager.NavigateTo("/IndexProductos");
         }
     }
 }
