--- a/Barberia/Barberia/Components/Pages/Ventas/IndexVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/IndexVentas.razor
@@ -11,7 +11,7 @@
 
 
 
-<PageTitle>Barbero</PageTitle>
+<PageTitle>Ventas</PageTitle>
 <RadzenNotification />
 
 <a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
@@ -21,7 +21,7 @@
             <div class="fondo " style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
-                    <h1 class="fw-bold mb-2 text-uppercase">Barberos</h1>
+                    <h1 class="fw-bold mb-2 text-uppercase">Ventas</h1>
 
                     <div class="tab-content">
                         <form>
@@ -54,7 +54,7 @@
                                                 <td>
                                                     <div>
                                                         <a href="/EditVenta/@venta.VentaId" class="btn btn-outline-primary"><i class="bi bi-pencil-fill" /> Editar</a>
-                                                        <a href="/ViewVenta/@venta.VentaId" class="btn btn-outline-primary"><i class="bi bi-eyes" /> View</a>
+                                                        <a href="/ViewVenta/@venta.VentaId" class="btn btn-outline-primary"><i class="bi bi-eye" /> View</a>
                                                         <a href="/DeleteVentas/@venta.VentaId" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
                                                     </div>
                                                 </td>
