--- a/Barberia/Barberia/Components/Pages/Compra/IndexCompras.razor
+++ b/Barberia/Barberia/Components/Pages/Compra/IndexCompras.razor
@@ -18,7 +18,7 @@
             <div class="fondo " style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
-                    <h1 class="fw-bold mb-2 text-uppercase">Barberos</h1>
+                    <h1 class="fw-bold mb-2 text-uppercase">Compras</h1>
 
                     <div class="tab-content">
                         <form>
@@ -49,7 +49,7 @@
                                                 <td>@compra.FecheDeCompra.ToShortDateString()</td>
                                                 <td>
                                                     <div>
-                                                        @*  <a href="/EditCompra/@compra.CompraId" class="btn btn-outline-primary"><i class="bi bi-pencil-fill" /> Editar</a> *@
+                                                        <a href="/EditCompra/@compra.CompraId" class="btn btn-outline-primary"><i class="bi bi-pencil-fill" /> Editar</a>
                                                         <a href="/ViewCompra/@compra.CompraId" class="btn btn-outline-primary"><i class="bi bi-eyes" /> View</a>
                                                         <a href="/DeleteCompra/@compra.CompraId" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</a>
                                                     </div>
