--- a/Barberia/Barberia/Components/Pages/Compra/ViewCompras.razor
+++ b/Barberia/Barberia/Components/Pages/Compra/ViewCompras.razor
@@ -15,23 +15,21 @@
 <PageTitle>View Compra</PageTitle>
 
 
-<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/CompraIndex" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="fondo " style="border-radius: 1rem;">
+            <div class="fondo col-lg-6 col-xl-6" style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
-                    <h1 class="fw-bold mb-2 text-uppercase">Barberos</h1>
+                    <h1 class="fw-bold mb-2 text-uppercase">Ver compras</h1>
 
                     <div class="tab-content">
 
                         <div class="col-md-11 mx-auto">
-                            <h3 class="text-center"><strong>Datos de la venta</strong></h3>
                             <div class="border-primary border border-2">
                                 <div class="card-body">
                                     <ul class="list-unstyled" style="margin-top: 20px; margin-bottom: 20px;">
-                                        <li><strong>ProveedorId:</strong> @Compras.CompraId</li>
                                         <li><strong>FechaCreacion:</strong> @Compras.FecheDeCompra.ToShortDateString()</li> 
                                     </ul>
                                 </div>
@@ -68,6 +66,14 @@
                     </div>
 
                     <!-- Footer -->
+
+                    <div class="d-flex justify-content-center mt-3">
+                        <td>
+                            <div>
+                                <a href="/CompraIndex" class="w-20 btn btn-outline-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
+                            </div>
+                        </td>
+                    </div>
                 </div>
             </div>
         </div>
