--- a/Barberia/Barberia/Components/Pages/Productos/CreateProducto.razor
+++ b/Barberia/Barberia/Components/Pages/Productos/CreateProducto.razor
@@ -21,7 +21,7 @@
                 <div class="fondo col-lg-6 col-xl-6 " style="border-radius: 2rem;">
 
                     <div class="card-body p-5">
-                        <h2 class="fw-bold mb-2 text-uppercase text-center">Editar barberos</h2>
+                        <h2 class="fw-bold mb-2 text-uppercase text-center">Crear producto</h2>
 
                         <div class="row tab-content">
                             <div class="mb-4">
@@ -64,7 +64,7 @@
 
                             <div class="d-flex justify-content-center mt-3">
                                 <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Guardar</button>
-                                <a href="/MenuFactura" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
+                                <a href="/MenuAdmin" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
             notificationServices.Notify(successMessage);
             
             // Redirigir después de guardar
-            navigationManager.NavigateTo("/InventarioIndex");
+            navigationManager.NavigateTo("/MenuAdmin");
         }
         else
         {
