--- a/Barberia/Barberia/Components/Pages/Productos/EditProducto.razor
+++ b/Barberia/Barberia/Components/Pages/Productos/EditProducto.razor
@@ -65,7 +65,7 @@
 
                             <div class="d-flex justify-content-center mt-3">
                                 <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Guardar</button>
-                                <a href="/MenuFactura" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
+                                <a href="/IndexProductos" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
             notificationServices.Notify(successMessage);
 
             // Redirigir después de guardar
-            navigationManager.NavigateTo("/InventarioIndex");
+            navigationManager.NavigateTo("/IndexProductos");
         }
         else
         {
