--- a/Barberia/Barberia/Components/Pages/Productos/ViewProductos.razor
+++ b/Barberia/Barberia/Components/Pages/Productos/ViewProductos.razor
@@ -8,14 +8,14 @@
 
 @rendermode InteractiveAuto
 <RadzenNotification />
-<PageTitle>Detalles del producto</PageTitle>
+<PageTitle>Producto</PageTitle>
 
 
-<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/IndexProductos" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="fondo " style="border-radius: 1rem;">
+            <div class="fondo col-lg-6 col-xl-6" style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
                     <h1 class="fw-bold mb-2 text-uppercase">Datos del producto</h1>
@@ -24,11 +24,11 @@
 
                         <div class="col-md-11 mx-auto">
                             <h3 class="text-center"><strong>Datos de la venta</strong></h3>
-                            <div class="border-primary border border-2">
+                            <div >
                                 <div class="card-body">
                                     <ul class="list-unstyled" style="margin-top: 20px; margin-bottom: 20px;">
-                                        <li><strong>ProveedorId:</strong> @productos.ProductoId</li>
-                                        <li><strong>FechaCreaci&oacute;n:</strong> @productos.FechaCreacion.ToShortDateString()</li>
+                                        <li><strong>Id:</strong> @productos.ProductoId</li>
+                                        <li><strong>Fecha de Creaci&oacute;n:</strong> @productos.FechaCreacion.ToShortDateString()</li>
                                         <li><strong>Nombre:</strong> @productos.Nombre</li>
                                         <li><strong>Descripci&oacute;n:</strong> @productos.Descripcion</li>
                                         <li><strong>Precio de Venta:</strong> @productos.PrecioVenta.ToString("N2")</li>
@@ -38,8 +38,13 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="d-flex justify-content-center mt-3">
+                            <a href="/IndexProductos" class="w-20 btn btn-lg btn-outline-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
+                        </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
 
