--- a/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/CreateVentas.razor
@@ -24,7 +24,7 @@
                 <div class="fondo col-lg-6 col-xl-6 " style="border-radius: 2rem;">
 
                     <div class="card-body p-5">
-                        <h2 class="fw-bold mb-2 text-uppercase text-center">Editar barberos</h2>
+                        <h2 class="fw-bold mb-2 text-uppercase text-center">Ventas</h2>
 
                         <div class="row tab-content">
                             <div class="mb-4">
@@ -67,7 +67,7 @@
                                                     </div>
 
                                                     <div class="col-12 d-flex align-items-end">
-                                                        <button type="button" class="btn btn-outline-success" @onclick="AgregarDetalle"><i class="bi bi-plus-circle" /> Agregar Detalle</button>
+                                                        <button type="button" class="btn btn-outline-success" @onclick="AgregarDetalle"><i class="bi bi-plus-circle" /> Agregar </button>
                                                     </div>
                                                 </div>
                                             </section>
