--- a/Barberia/Barberia/Components/Pages/Ventas/DeleteVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/DeleteVentas.razor
@@ -9,14 +9,14 @@
 
 <PageTitle>Ventas</PageTitle>
 
-<a href="/MenuAdmin" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
+<a href="/IndexVentas" class="w-20 btn btn-lg btn-outline-secondary"><i class="bi bi-arrow-left"></i></a>
 <section class=" gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="fondo " style="border-radius: 1rem;">
+            <div class="fondo col-lg-6 col-xl-6" style="border-radius: 1rem;">
 
                 <div class="card-body p-5 text-center">
-                    <h1 class="fw-bold mb-2 text-uppercase">Barberos</h1>
+                    <h1 class="fw-bold mb-2 text-uppercase">Eliminar ventas</h1>
 
                     <div class="tab-content">
 
@@ -57,10 +57,18 @@
                                         }
                                     </tbody>
                                 </table>
-                                <p><strong>Total de ventas: </strong>@Ventas.VentaDetalle.Count</p>
-                                <p><strong>Total : </strong>@CalcularTotalVentas().ToString("N2")</p>
+
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <p><strong>Total de ventas: </strong>@Ventas.VentaDetalle.Count</p>
+                                    </div>
+                                    <div>
+                                        <p><strong>Total : </strong>@CalcularTotalVentas().ToString("N2")</p>
+                                    </div>
+                                </div>
                             }
                         </div>
+
                     </div>
 
                     <!-- Footer -->
@@ -68,6 +76,7 @@
                     <div class="d-flex justify-content-center mt-3">
                         <td>
                             <div>
+                                <a href="/IndexVentas" class="w-20 btn btn-outline-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
                                 <button @onclick="() => ConfirmarEliminar(Ventas.VentaId)" class="btn btn-outline-danger"><i class="bi bi-trash-fill" /> Eliminar</button>
                             </div>
                         </td>
@@ -151,7 +160,7 @@
             notificationServices.Notify(mensaje);
 
             await Task.Delay(3000);
-            navigationManager.NavigateTo("/VIndex");
+            navigationManager.NavigateTo("/IndexVentas");
         }
     }
     private async Task ConfirmarEliminar(int id)
