--- a/Barberia/Barberia/Components/Pages/Ventas/EditVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/EditVentas.razor
@@ -11,7 +11,7 @@
 @attribute [Authorize(Roles = "Admin")]
 
 
-<PageTitle>Editar Ventas</PageTitle>
+<PageTitle>Ventas</PageTitle>
 <RadzenNotification />
 
 <EditForm Model="@ventas" OnValidSubmit="Guardar" FormName="ventas">
@@ -23,7 +23,7 @@
                 <div class="fondo col-lg-6 col-xl-6 " style="border-radius: 2rem;">
 
                     <div class="card-body p-5">
-                        <h2 class="fw-bold mb-2 text-uppercase text-center">Editar barberos</h2>
+                        <h2 class="fw-bold mb-2 text-uppercase text-center">Editar ventas</h2>
 
                         <div class="row tab-content">
                             <div class="mb-4">
@@ -72,7 +72,7 @@
                                                     </div>
 
                                                     <div class="col-12 d-flex align-items-end">
-                                                        <button type="button" class="btn btn-outline-success" @onclick="AgregarDetalle"><i class="bi bi-plus-circle" /> Agregar Detalle</button>
+                                                        <button type="button" class="btn btn-outline-success" @onclick="AgregarDetalle"><i class="bi bi-plus-circle" /> Agregar</button>
                                                     </div>
                                                 </div>
                                             </section>
@@ -111,7 +111,7 @@
 
                             <div class="d-flex justify-content-center mt-3">
                                 <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Agregar</button>
-                                <a href="/MenuFactura" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
+                                <a href="/IndexVentas" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Cancelar</a>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                 };
             notificationServices.Notify(Mensaje1);
             await Task.Delay(1000);
-            navigationManager.NavigateTo("/VIndex");
+            navigationManager.NavigateTo("/IndexVentas");
         }
         else
         {
