--- a/Barberia/Barberia/Components/Pages/Ventas/VistaVentas.razor
+++ b/Barberia/Barberia/Components/Pages/Ventas/VistaVentas.razor
@@ -10,7 +10,7 @@
 @inject NotificationService notificationServices
 @inject IJSRuntime JSRuntime
 @attribute [Authorize(Roles = "Admin")]
-
+<PageTitle>Ventas</PageTitle>
 
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
@@ -18,7 +18,7 @@
             <div class="fondo col-lg-6 col-xl-6 " style="border-radius: 2rem;">
 
                 <div class="card-body p-5">
-                    <h2 class="fw-bold mb-2 text-uppercase text-center">Editar barberos</h2>
+                    <h2 class="fw-bold mb-2 text-uppercase text-center">Editar ventas</h2>
 
                     <div class="row tab-content">
                         <div class="mb-4">
@@ -37,8 +37,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- Productos -->
-                                    <div class="col-md-11 mx-auto">
+                                    <!-- Productos --><div class="col-md-11 mx-auto">
                                         <h3 class="text-center"><strong>Productos</strong></h3>
                                         @if (Ventas.VentaDetalle.Count > 0)
                                         {
@@ -61,15 +60,23 @@
                                                     }
                                                 </tbody>
                                             </table>
-                                            <p><strong>Total de ventas: </strong>@Ventas.VentaDetalle.Count</p>
-                                            <p><strong>Total : </strong>@CalcularTotalVentas().ToString("N2")</p>
+
+                                            <div class="d-flex justify-content-between">
+                                                <div>
+                                                    <p><strong>Total de ventas: </strong>@Ventas.VentaDetalle.Count</p>
+                                                </div>
+                                                <div>
+                                                    <p><strong>Total : </strong>@CalcularTotalVentas().ToString("N2")</p>
+                                                </div>
+                                            </div>
                                         }
                                     </div>
+
                                 </div>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center mt-3">
-                            <a href="/MenuFactura" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
+                            <a href="/IndexVentas" class="w-20 btn btn-lg btn-primary ms-3"><i class="bi bi-arrow-left"></i> Volver</a>
                         </div>
                     </div>
                 </div>
