Correciones en todos los componentes

--- a/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
+++ b/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
@@ -57,7 +57,7 @@
                             </div>
                             <div class="text-center">
                                 <h4 class="row fw-bold mb-2">Sumatoria del Total: @cobrar.Total</h4>
-                                <h4 class="row fw-bold mb-2">Descuento: @cobrar.Comision</h4>
+                                <h4 class="row fw-bold mb-2">Descuento: 30%</h4>
                                 <h4 class="row fw-bold mb-2">Total a pagar: @cobrar.MontoCobrar.ToString("N2")</h4>
                                 <button type="button" class="btn btn-primary" @onclick=@(async () => await Guardar())>Cobrar</button>
                             </div>
