--- a/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
+++ b/Barberia/Barberia/Components/Pages/MenuAdmoin.razor
@@ -14,9 +14,9 @@
                         <h3 class="fw-bold text-uppercase">Crear Usuario</h3>
                     </div>
                 </button>
-                <button class="fondo col-md-6 btn btn-primary rounded mb-5 flex-md-row" style="border-radius: 1rem; color: black;" @onclick="() => EliminarBarbero()">
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Producto()">
                     <div class="card-body p-5">
-                        <h3 class="fw-bold text-uppercase">Barberos</h3>
+                        <h3 class="fw-bold text-uppercase">Crear Producto</h3>
                     </div>
                 </button>
                 <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Factura()">
@@ -24,19 +24,14 @@
                         <h3 class="fw-bold text-uppercase">Ver Factura</h3>
                     </div>
                 </button>
-                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Cobrar()">
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5 flex-md-row" style="border-radius: 1rem; color: black;" @onclick="() => EliminarBarbero()">
                     <div class="card-body p-5">
-                        <h3 class="fw-bold text-uppercase">Cobrar</h3>
+                        <h3 class="fw-bold text-uppercase">Barberos</h3>
                     </div>
                 </button>
                 <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Ventas()">
                     <div class="card-body p-5">
                         <h3 class="fw-bold text-uppercase">Ventas</h3>
-                    </div>
-                </button>
-                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Producto()">
-                    <div class="card-body p-5">
-                        <h3 class="fw-bold text-uppercase">Crear Producto</h3>
                     </div>
                 </button>
                 <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Inventario()">
@@ -46,7 +41,12 @@
                 </button>
                 <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Compra()">
                     <div class="card-body p-5">
-                        <h3 class="fw-bold text-uppercase">Compra</h3>
+                        <h3 class="fw-bold text-uppercase">Compras</h3>
+                    </div>
+                </button>
+                <button class="fondo col-md-6 btn btn-primary rounded mb-5" style="border-radius: 1rem; color: black;" @onclick="() => Cobrar()">
+                    <div class="card-body p-5">
+                        <h3 class="fw-bold text-uppercase">Cobrar</h3>
                     </div>
                 </button>
             </div>
