--- a/Barberia/Barberia/Components/Pages/Compra/CreateCompras.razor
+++ b/Barberia/Barberia/Components/Pages/Compra/CreateCompras.razor
@@ -23,20 +23,18 @@
                 <div class="fondo col-lg-6 col-xl-6 " style="border-radius: 2rem;">
 
                     <div class="card-body p-5">
-                        <h2 class="fw-bold mb-2 text-uppercase text-center">Editar barberos</h2>
+                        <h2 class="fw-bold mb-2 text-uppercase text-center">Compra</h2>
 
-                        <div class="row tab-content">
-                            <div class="row mb-3">
-                                <div class="col-4">
-                                    @*Compra Id*@
-                                    <label class="form-label" for="CompraId"><strong>CompraId:</strong></label>
-                                    <InputNumber id="CompraId" class="form-control" @bind-Value="Compras.CompraId" readonly></InputNumber>
-                                </div>
-                                <div class="col-4">
-                                    @*FechaCreacion*@
-                                    <label class="form-label" for="fechaCreacion"><strong>Fecha Creaci&oacute;n:</strong></label>
-                                    <InputDate id="fechaCreacion" class="form-control" @bind-Value="Compras.FecheDeCompra" readonly></InputDate>
-                                </div>
+                        <div class="row card-body justify-content-center">
+                            <div class="col-4">
+                                @*Compra Id*@
+                                <label class="form-label" for="CompraId"><strong>CompraId:</strong></label>
+                                <InputNumber id="CompraId" class="form-control" @bind-Value="Compras.CompraId" readonly></InputNumber>
+                            </div>
+                            <div class="col-4">
+                                @*FechaCreacion*@
+                                <label class="form-label" for="fechaCreacion"><strong>Fecha Creaci&oacute;n:</strong></label>
+                                <InputDate id="fechaCreacion" class="form-control" @bind-Value="Compras.FecheDeCompra" readonly></InputDate>
                             </div>
 
 
