Arreglo de link navegacin en Cobro

--- a/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
+++ b/Barberia/Barberia/Components/Pages/Cobrar/CreateCobrar.razor
@@ -117,7 +117,7 @@
                     };
                 notificationServices.Notify(Mensaje1);
                 await Task.Delay(1000);
-                navigationManager.NavigateTo("/");
+                navigationManager.NavigateTo("/MenuAdmin");
             }
             else
             {
