--- a/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
@@ -35,6 +35,7 @@
                                         <th>Cliente</th>
                                         <th>Forma de pago</th>
                                         <th>Monto pagado</th>
+                                        <th>Cobrada</th>
                                     </tr>
                                 </thead>
 
@@ -57,6 +58,8 @@
                                                 <td>@item.Name</td>
                                                 <td>@item.FormaDePago</td>
                                                 <td>@item.Total.ToString("N2")</td>
+                                                <td>@(item.Cobrada.ToString())</td>
+
                                             </tr>
                                         }
 
