--- a/Barberia/Barberia/Components/Pages/Factura/CreateFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/CreateFactura.razor
@@ -90,6 +90,7 @@
     {
         factura.BarberoName = Barbero;
         factura.Name = "General";
+        factura.Fecha = DateTime.Now;
 
         if (string.IsNullOrEmpty(factura.BarberoName) && string.IsNullOrEmpty(factura.Name))
         {
