--- a/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/IndexFactura.razor
@@ -21,51 +21,50 @@
 
                     <div class="tab-content">
                         <form>
-                            @*
-                            <div>
-                            <button type="submit" class="w-20 btn btn-lg btn-success"><i class="bi bi-floppy"></i> Aceptar</button>
-                            </div> *@
-
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th></th>
-                                        <th>Barbero</th>
-                                        <th>Fecha</th>
-                                        <th>Cliente</th>
-                                        <th>Forma de pago</th>
-                                        <th>Monto pagado</th>
-                                        <th>Cobrada</th>
-                                    </tr>
-                                </thead>
-
-                                <tbody>
-                                    @if (!factura.Any())
-                                    {
+                            <div class="table-container" style="max-height: 400px; overflow-y: auto;">
+                                <table class="table">
+                                    <thead>
                                         <tr>
-                                            <td colspan="3" class="text-center">@mensaje</td>
+                                            <th></th>
+                                            <th>Barbero</th>
+                                            <th>Fecha</th>
+                                            <th>Cliente</th>
+                                            <th>Forma de pago</th>
+                                            <th>Monto pagado</th>
+                                            <th>Cobrada</th>
                                         </tr>
-                                    }
-                                    else
-                                    {@foreach (var item in factura)
+                                    </thead>
+
+                                    <tbody>
+                                        @if (!factura.Any())
                                         {
                                             <tr>
-                                                <td>
-                                                    <img src="/Imagenes/Factura.png" style="width: 50px; height: auto; margin-right: 10px;" />
-                                                </td>
-                                                <td>@item.BarberoName</td>
-                                                <td>@item.Fecha</td>
-                                                <td>@item.Name</td>
-                                                <td>@item.FormaDePago</td>
-                                                <td>@item.Total.ToString("N2")</td>
-                                                <td>@(item.Cobrada.ToString())</td>
-
+                                                <td colspan="3" class="text-center">@mensaje</td>
                                             </tr>
                                         }
+                                        else
+                                        {
+                                            @foreach (var item in factura)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        <img src="/Imagenes/Factura.png" style="width: 50px; height: auto; margin-right: 10px;" />
+                                                    </td>
+                                                    <td>@item.BarberoName</td>
+                                                    <td>@item.Fecha.ToShortDateString()</td>
+                                                    <td>@item.Name</td>
+                                                    <td>@item.FormaDePago</td>
+                                                    <td>@item.Total.ToString("N2")</td>
+                                                    <td>@(item.Cobrada.ToString())</td>
 
-                                    }
-                                </tbody>
-                            </table>
+                                                </tr>
+                                            }
+
+                                        }
+                                    </tbody>
+                                </table>
+
+                            </div>
                         </form>
                     </div>
                 </div>
