--- a/Barberia/Barberia/Components/Pages/Barbero/CreateBarbero.razor
+++ b/Barberia/Barberia/Components/Pages/Barbero/CreateBarbero.razor
@@ -89,7 +89,7 @@
                 };
             notificationServices.Notify(Mensaje1);
             await Task.Delay(1000);
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/MenuAdmin");
         }
         else
         {
