--- a/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
+++ b/Barberia/Barberia/Components/Pages/Factura/MenuFactura.razor
@@ -6,22 +6,24 @@
 <PageTitle>Inicio</PageTitle>
 
 <h1 class="fw-bold mb-2 text-uppercase text-center">Barberia X</h1>
-<div class="row">
-    <section class="gradient-custom">
-        <div class="container py-5 h-100">
-            <div class="row d-flex">
-                @foreach (var pelada in Peladas)
-                {
-                    <button class="fondo col-md-4 btn btn-primary rounded" style="border-radius: 1rem; color: black;" @onclick="() => NavigateToPelada(pelada.peladasId)">
-                        <div class="card-body p-5">
-                            <h3 class="fw-bold text-uppercase">@pelada.peladasName</h3>
-                        </div>
-                    </button>
-                }
-            </div>
-        </div>
-    </section>
-</div>
+@if (Peladas.Count == 0)
+{
+    <p>No hay peladas disponibles.</p>
+}
+else
+{
+    <div class="row d-flex">
+        @foreach (var pelada in Peladas)
+        {
+            <button class="fondo col-md-4 btn btn-primary rounded" style="border-radius: 1rem; color: black;" @onclick="() => NavigateToPelada(pelada.peladasId)">
+                <div class="card-body p-5">
+                    <h3 class="fw-bold text-uppercase">@pelada.peladasName</h3>
+                </div>
+            </button>
+        }
+    </div>
+}
+
 
 
 @code {
